# zkETHer

./: .env.example  .gitignore  .gitmodules  App.tsx  Cargo.toml  FIREBASE_SETUP.md  TROUBLESHOOTING_PLAN.md  anvil-deploy.md  app.json  babel.config.js  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
android/app/: google-services.json
circom/: README.md  multiplier_final.zkey  package-lock.json  package.json  verification_key.json
circom/circuits/: multiplier.circom  zkether.circom
circom/scripts/: compile-circuits.sh  test-circuit.js
ios/: GoogleService-Info.plist  Podfile
ios/mobilezkETHer/: Info.plist
ios/mobilezkETHer.xcodeproj/: project.pbxproj
scripts/: deploy-anvil.sh
src/: types.ts
src-noir/: lib.rs
src/components/: AuthenticationFlow.tsx  Button.tsx  CircomProofScreen.tsx  ComplianceDashboard.tsx  DepositFlow.tsx  DotMatrix.tsx  HomeScreen.tsx  NetworkStatus.tsx  OnboardingFlow.tsx  SettingsScreen.tsx  SwapModal.tsx  TokenOperations.tsx  WithdrawFlow.tsx  index.ts
src/config/: contracts.ts  deployedContracts.ts  firebase.ts  walletConnect.ts
src/contexts/: KYCContext.tsx  OnboardingContext.tsx  WalletContext.tsx
src/navigation/: AppNavigator.tsx
src/services/: commitmentService.js  commitmentVerifier.js  contractService.ts  firebaseAuth.ts  libsodiumHelper.js  moproService.ts  networkService.ts  noteStorageService.ts  onchainIdService.ts  sandboxApi.ts  secureKeyService.ts  (+4 more)
temp-check/: app.json  package.json
zkETHer-Protocol/: .gitignore  .gitmodules  DEPLOYMENT.md  README.md  foundry.toml  package.json
(+51 files in other folders)
