
[package]
name = "mopro-example-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["mopro-ffi/noir"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" , branch = "v0.2.x" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git", branch = "v0.2.x", features = ["uniffi"] }
rust-witness = "0.1"
num-bigint = "0.4.0"
thiserror = "2.0.12"
# HALO2_DEPENDENCIES

serial_test = "3.2.0"

[build-dependencies]
rust-witness = "0.1"

# CIRCOM_DEPENDENCIES
    